--- a/Code/Tweets_emotions.ipynb
+++ b/Code/Tweets_emotions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,8 +11,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "from huggingface_hub import notebook_login\n",
+    "notebook_login()"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +33,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "665a8e7c99db4ff18d757928994a96aa",
+       "model_id": "91c56d962db44e0f8bb2ce0d084c79bd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -43,16 +51,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "No config specified, defaulting to: emo_event/es\n",
+      "Found cached dataset emo_event (/home/juanjo/.cache/huggingface/datasets/fmplaza___emo_event/es/1.1.0/05d5c93b8773e3d90b52effb7132b04cd8b2ccea8d4a0750989ec3aaeb59cad4)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "04bae356192b4017a948144956127d0a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/3 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "dataset = load_dataset('fmplaza/EmoEvent')"
+    "dataset2 = load_dataset('fmplaza/EmoEvent', use_auth_token=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,6 +95,306 @@
     "from datetime import timedelta, datetime \n",
     "from dateutil.relativedelta import relativedelta\n",
     "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = tweepy.Client(bearer_token = \"AAAAAAAAAAAAAAAAAAAAAKKEcwEAAAAA1VgzT5upnu%2B5POQ3dbdUx0%2B5vfA%3DdslAW6ut31gZhQD9SjNKJ4scCFd8bHgbevp8eGcJprbd2LTrGf\", wait_on_rate_limit = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ids_df = pd.read_csv('../Data/corpus_marcado6emociones.txt', sep=' ',skiprows=19, header=None, names = ['id','Emocion']).apply(lambda s:s.str.replace(\"'\", \"\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "200\n",
+      "300\n",
+      "400\n",
+      "500\n",
+      "600\n",
+      "700\n",
+      "800\n",
+      "900\n",
+      "1000\n",
+      "1100\n",
+      "1200\n",
+      "1300\n",
+      "1400\n",
+      "1500\n",
+      "1600\n",
+      "1700\n",
+      "1800\n",
+      "1900\n",
+      "2000\n",
+      "2100\n",
+      "2200\n",
+      "2300\n",
+      "2400\n",
+      "2500\n",
+      "2600\n",
+      "2700\n",
+      "2800\n",
+      "2900\n",
+      "3000\n",
+      "3100\n",
+      "3200\n",
+      "3300\n",
+      "3400\n",
+      "3500\n",
+      "3600\n",
+      "3700\n",
+      "3800\n",
+      "3900\n",
+      "4000\n",
+      "4100\n",
+      "4200\n",
+      "4300\n",
+      "4400\n",
+      "4500\n",
+      "4600\n",
+      "4700\n",
+      "4800\n",
+      "4900\n",
+      "5000\n",
+      "5100\n",
+      "5200\n",
+      "5300\n",
+      "5400\n",
+      "5500\n",
+      "5600\n",
+      "5700\n",
+      "5800\n",
+      "5900\n",
+      "6000\n",
+      "6100\n",
+      "6200\n",
+      "6300\n",
+      "6400\n",
+      "6500\n",
+      "6600\n",
+      "6700\n",
+      "6800\n",
+      "6900\n",
+      "7000\n",
+      "7100\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Rate limit exceeded. Sleeping for 313 seconds.\n"
+     ]
+    }
+   ],
+   "source": [
+    "inicio = 0\n",
+    "for i in list(range(100,len(ids_df),100)) + [len(ids_df)]:\n",
+    "    ids_list = list(ids_df['id'][inicio:i])\n",
+    "    emocion_list = ids_df['Emocion'][inicio:i]\n",
+    "    data = client.get_tweets(ids = ids_list).data\n",
+    "    if data != None:\n",
+    "        text_list = [j.text for j in data ]\n",
+    "        ids_list = pd.Series([j.id for j in data ]).astype(str)\n",
+    "        emocion_list = ids_df[inicio:i][ids_df['id'][inicio:i].isin(ids_list)][inicio:i]['Emocion'].reset_index(drop = True)\n",
+    "    inicio = i\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 193,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data != None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ids_list = list(ids_df['id'][0:100])\n",
+    "emocion_list = ids_df['Emocion'][0:100]\n",
+    "data = client.get_tweets(ids = ids_list).data\n",
+    "text_list = [i.text for i in data ]\n",
+    "ids_list = pd.Series([i.id for i in data ]).astype(str)\n",
+    "emocion_list = ids_df[0:100][ids_df['id'][0:100].isin(ids_list)][0:100]['Emocion'].reset_index(drop = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>text</th>\n",
+       "      <th>emocion</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>465049714141200384</td>\n",
+       "      <td>Buuenoos diiias ya estoy con mii pekeñaa!! Y c...</td>\n",
+       "      <td>Alegria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>468241881428951041</td>\n",
+       "      <td>Nuevos proyectos, nuevas metas, una nueva sema...</td>\n",
+       "      <td>Alegria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>469580509895729153</td>\n",
+       "      <td>Hay altísimas posibilidades de a ver echo bien...</td>\n",
+       "      <td>Alegria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>469251121354391553</td>\n",
+       "      <td>Me tome un taxi con el primer tachero del mund...</td>\n",
+       "      <td>Alegria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>468435168693211136</td>\n",
+       "      <td>Lindos trofeos trajo el rojo ayer!!! ☺ #Feliz ...</td>\n",
+       "      <td>Alegria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56</th>\n",
+       "      <td>469827996774187008</td>\n",
+       "      <td>Llego el día. Campus 2014 GyE.. Muchas Gracias...</td>\n",
+       "      <td>Alegria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57</th>\n",
+       "      <td>464611519876321281</td>\n",
+       "      <td>De esas veces qe solo puedo decir..... GRACIAS...</td>\n",
+       "      <td>Alegria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>465862724283801600</td>\n",
+       "      <td>Muy lindo finde, muy jodido y lindo el festejo...</td>\n",
+       "      <td>Alegria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59</th>\n",
+       "      <td>469011283451604992</td>\n",
+       "      <td>Estamos preparando #manualidades para éste fin...</td>\n",
+       "      <td>Alegria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
+       "      <td>468504011377618944</td>\n",
+       "      <td>Pues llegó el dia de acabar con las alarmas, d...</td>\n",
+       "      <td>Alegria</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>61 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    id                                               text  \\\n",
+       "0   465049714141200384  Buuenoos diiias ya estoy con mii pekeñaa!! Y c...   \n",
+       "1   468241881428951041  Nuevos proyectos, nuevas metas, una nueva sema...   \n",
+       "2   469580509895729153  Hay altísimas posibilidades de a ver echo bien...   \n",
+       "3   469251121354391553  Me tome un taxi con el primer tachero del mund...   \n",
+       "4   468435168693211136  Lindos trofeos trajo el rojo ayer!!! ☺ #Feliz ...   \n",
+       "..                 ...                                                ...   \n",
+       "56  469827996774187008  Llego el día. Campus 2014 GyE.. Muchas Gracias...   \n",
+       "57  464611519876321281  De esas veces qe solo puedo decir..... GRACIAS...   \n",
+       "58  465862724283801600  Muy lindo finde, muy jodido y lindo el festejo...   \n",
+       "59  469011283451604992  Estamos preparando #manualidades para éste fin...   \n",
+       "60  468504011377618944  Pues llegó el dia de acabar con las alarmas, d...   \n",
+       "\n",
+       "    emocion  \n",
+       "0   Alegria  \n",
+       "1   Alegria  \n",
+       "2   Alegria  \n",
+       "3   Alegria  \n",
+       "4   Alegria  \n",
+       "..      ...  \n",
+       "56  Alegria  \n",
+       "57  Alegria  \n",
+       "58  Alegria  \n",
+       "59  Alegria  \n",
+       "60  Alegria  \n",
+       "\n",
+       "[61 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 183,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame({'id':ids_list, 'text':text_list, 'emocion': emocion_list })"
    ]
   },
   {
@@ -88,15 +419,6 @@
     "    for palabra in emociones_dict[emocion]:\n",
     "        if not palabra.isascii():\n",
     "            emociones_dict[emocion].append(unidecode.unidecode(palabra))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "client = tweepy.Client(bearer_token = \"AAAAAAAAAAAAAAAAAAAAAKKEcwEAAAAA1VgzT5upnu%2B5POQ3dbdUx0%2B5vfA%3DdslAW6ut31gZhQD9SjNKJ4scCFd8bHgbevp8eGcJprbd2LTrGf\", wait_on_rate_limit = True)"
    ]
   },
   {
