--- a/Document/ref.bib
+++ b/Document/ref.bib
@@ -347,4 +347,22 @@
 	note = "[Online; accessed 26-September-2022]"
 }
 
-`
+@article{sidorov2016construccion,
+	title={Construcci{\'o}n de un corpus marcado con emociones para el an{\'a}lisis de sentimientos en Twitter en espa{\~n}ol},
+	author={Sidorov, Grigori and Haro, Sof{\'\i}a Natalia Galicia and V{\'a}zquez, Vanessa Alejandra Camacho},
+	journal={Revista Escritos BUAP},
+	volume={1},
+	number={1},
+	year={2016}
+}
+
+@inproceedings{plaza2020emoevent,
+	title={EmoEvent: A multilingual emotion corpus based on different events},
+	author={Plaza-del-Arco, Flor Miriam and Strapparava, Carlo and Lopez, L Alfonso Urena and Mart{\'\i}n-Valdivia, M Teresa},
+	booktitle={Proceedings of the 12th Language Resources and Evaluation Conference},
+	pages={1492--1498},
+	year={2020}
+}
+
+
+
