actualizo codigo tweets

--- a/Code/Trending_tweets.ipynb
+++ b/Code/Trending_tweets.ipynb
@@ -29,39 +29,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 109,
    "id": "0857c154-a744-42a2-adea-b038d1aaf28f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "trendings_df = pd.read_csv('../Data/trendings.csv')"
+    "trendings_keywords = pd.read_csv('../Data/trendings.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "8578b990-1a50-4b44-aec3-885858ee1e91",
-   "metadata": {},
+   "execution_count": 126,
+   "id": "8c4824a4-9980-45bc-8d76-ac516b7c3a9d",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "def get_tweets(trending, number_tweets, start, end, fields):\n",
+    "def get_trendings(trending, start_date, number_days, minutes_spam ):\n",
     "    trending_words = '(' +trending+  ')'\n",
-    "    searched_tweets = [tweet for tweet in tweepy.Paginator(client.search_all_tweets ,query = trending_words ,start_time = start, end_time = end, sort_order= 'relevancy',\n",
-    "                                 tweet_fields = fields, max_results=500).flatten(limit=number_tweets)]\n",
-    "    tweets_df = pd.DataFrame(searched_tweets, columns = fields)\n",
-    "    tweets_df['date']= start\n",
-    "    tweets_df = pd.concat([tweets_df.drop(['public_metrics'], axis=1), pd.json_normalize(tweets_df['public_metrics'])], axis=1)\n",
-    "    return tweets_df"
+    "    df_list = []\n",
+    "    end_date = start_date + relativedelta(days=number_days)\n",
+    "    while start_date < end_date:\n",
+    "        print(start_date)\n",
+    "        upper_limit = start_date+ relativedelta(minutes=minutes_spam)\n",
+    "        start= start_date.isoformat(\"T\") + \"Z\"\n",
+    "        end = upper_limit.isoformat(\"T\") + \"Z\"\n",
+    "        rsp = client.search_all_tweets(query = trending_words ,start_time = start, end_time = end, sort_order= 'relevancy',\n",
+    "                                     tweet_fields = fields, max_results=500)\n",
+    "        time.sleep(1)\n",
+    "        tweets_df = pd.DataFrame(rsp.data, columns = fields)\n",
+    "        tweets_df['date']= start\n",
+    "        tweets_df = pd.concat([tweets_df.drop(['public_metrics'], axis=1), pd.json_normalize(tweets_df['public_metrics'])], axis=1)\n",
+    "        df_list.append(tweets_df)\n",
+    "        start_date = upper_limit\n",
+    "    trendings_df = pd.concat(df_list)\n",
+    "    trendings_df = trendings_df.reset_index(drop=True)\n",
+    "    return(trendings_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "2de56d05-25a2-4290-acdc-fc87ad2cefe5",
+   "execution_count": 123,
+   "id": "caaec986-4318-41b6-8ef8-63c878e57e66",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022-05-22 00:00:00\n",
+      "2022-05-22 00:10:00\n",
+      "2022-05-22 00:20:00\n",
+      "2022-05-22 00:30:00\n",
+      "2022-05-22 00:40:00\n",
+      "2022-05-22 00:50:00\n",
+      "2022-05-22 01:00:00\n",
+      "2022-05-22 01:10:00\n",
+      "2022-05-22 01:20:00\n",
+      "2022-05-22 01:30:00\n",
+      "2022-05-22 01:40:00\n",
+      "2022-05-22 01:50:00\n",
+      "2022-05-22 02:00:00\n",
+      "2022-05-22 02:10:00\n",
+      "2022-05-22 02:20:00\n"
+     ]
+    }
+   ],
    "source": [
-    "number_tweets = 10\n",
     "fields = ['lang',\n",
     " 'public_metrics',\n",
     " 'author_id',\n",
@@ -72,303 +107,12 @@
     "         'geo',\n",
     "         'in_reply_to_user_id',\n",
     "         'referenced_tweets']\n",
-    "df_list = []\n",
-    "for i in range(len(trendings_df)):\n",
-    "    trending = trendings_df['trending'][i]\n",
-    "    start_date = datetime.strptime(trendings_df['date'][i], '%Y-%m-%d')\n",
-    "    end_date = start_date + relativedelta(days=1)\n",
-    "    start= start_date.isoformat(\"T\") + \"Z\"\n",
-    "    end = end_date.isoformat(\"T\") + \"Z\"\n",
-    "    start_date = datetime.strptime(trendings_df['date'][i], '%Y-%m-%d')\n",
-    "    end_date = start_date + relativedelta(days=1)\n",
-    "    df_list.append(get_tweets(trending, number_tweets, start, end, fields))\n",
-    "trendings_tweets = pd.concat(df_list)"
+    "start_date = datetime.strptime(trendings_keywords['date'][0], '%Y-%m-%d')\n",
+    "trending = trendings_keywords['trending'][0]\n",
+    "number_days = 0.1\n",
+    "minutes_spam = 10\n",
+    "trendings_df  = get_trendings(trending, start_date, number_days, minutes_spam )"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "id": "f7bcddb5-cf8f-4a85-a5b6-5eaaf568d48d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>lang</th>\n",
-       "      <th>author_id</th>\n",
-       "      <th>id</th>\n",
-       "      <th>created_at</th>\n",
-       "      <th>text</th>\n",
-       "      <th>conversation_id</th>\n",
-       "      <th>geo</th>\n",
-       "      <th>in_reply_to_user_id</th>\n",
-       "      <th>referenced_tweets</th>\n",
-       "      <th>date</th>\n",
-       "      <th>retweet_count</th>\n",
-       "      <th>reply_count</th>\n",
-       "      <th>like_count</th>\n",
-       "      <th>quote_count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>es</td>\n",
-       "      <td>1367272535071600641</td>\n",
-       "      <td>1528166340187627521</td>\n",
-       "      <td>2022-05-22 00:10:22+00:00</td>\n",
-       "      <td>En Cali también decimos Sí a @FicoGutierrez #F...</td>\n",
-       "      <td>1528166340187627521</td>\n",
-       "      <td>{'place_id': '003f97dd7a518791'}</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[(type, id)]</td>\n",
-       "      <td>2022-05-22T00:00:00Z</td>\n",
-       "      <td>418</td>\n",
-       "      <td>28</td>\n",
-       "      <td>1457</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>es</td>\n",
-       "      <td>548906668</td>\n",
-       "      <td>1528385615506640896</td>\n",
-       "      <td>2022-05-22 14:41:41+00:00</td>\n",
-       "      <td>Doña Judith Baca la tiene clara: el pueblo col...</td>\n",
-       "      <td>1528385615506640896</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-05-22T00:00:00Z</td>\n",
-       "      <td>476</td>\n",
-       "      <td>45</td>\n",
-       "      <td>799</td>\n",
-       "      <td>29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>es</td>\n",
-       "      <td>191283736</td>\n",
-       "      <td>1528381170676862976</td>\n",
-       "      <td>2022-05-22 14:24:01+00:00</td>\n",
-       "      <td>Mientras una revista nacional pone en su porta...</td>\n",
-       "      <td>1528381170676862976</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-05-22T00:00:00Z</td>\n",
-       "      <td>246</td>\n",
-       "      <td>24</td>\n",
-       "      <td>551</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>es</td>\n",
-       "      <td>1502666231966490627</td>\n",
-       "      <td>1528379793712025601</td>\n",
-       "      <td>2022-05-22 14:18:33+00:00</td>\n",
-       "      <td>Sigo al que me siga con Petro a ganar en prime...</td>\n",
-       "      <td>1528379793712025601</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-05-22T00:00:00Z</td>\n",
-       "      <td>329</td>\n",
-       "      <td>149</td>\n",
-       "      <td>1570</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>es</td>\n",
-       "      <td>1869817063</td>\n",
-       "      <td>1528166591376117762</td>\n",
-       "      <td>2022-05-22 00:11:22+00:00</td>\n",
-       "      <td>Hay que leer con muchísima atención esta gran ...</td>\n",
-       "      <td>1528166591376117762</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-05-22T00:00:00Z</td>\n",
-       "      <td>252</td>\n",
-       "      <td>36</td>\n",
-       "      <td>478</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>es</td>\n",
-       "      <td>18079284</td>\n",
-       "      <td>1528519828549472256</td>\n",
-       "      <td>2022-05-22 23:35:00+00:00</td>\n",
-       "      <td>\"Estoy absolutamente seguro que sería así y de...</td>\n",
-       "      <td>1528519828549472256</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-05-22T00:00:00Z</td>\n",
-       "      <td>146</td>\n",
-       "      <td>34</td>\n",
-       "      <td>351</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>es</td>\n",
-       "      <td>18079284</td>\n",
-       "      <td>1528329833830301698</td>\n",
-       "      <td>2022-05-22 11:00:02+00:00</td>\n",
-       "      <td>Habla Federico Gutiérrez en SEMANA. Dice cómo ...</td>\n",
-       "      <td>1528329833830301698</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-05-22T00:00:00Z</td>\n",
-       "      <td>118</td>\n",
-       "      <td>27</td>\n",
-       "      <td>239</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>es</td>\n",
-       "      <td>18079284</td>\n",
-       "      <td>1528345099389878272</td>\n",
-       "      <td>2022-05-22 12:00:41+00:00</td>\n",
-       "      <td>\"Soy una persona tranquila. En la vida nunca i...</td>\n",
-       "      <td>1528345099389878272</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-05-22T00:00:00Z</td>\n",
-       "      <td>156</td>\n",
-       "      <td>38</td>\n",
-       "      <td>418</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>es</td>\n",
-       "      <td>242730842</td>\n",
-       "      <td>1528406628420165633</td>\n",
-       "      <td>2022-05-22 16:05:11+00:00</td>\n",
-       "      <td>#NosUnimosONosJodemos “Los niños ven YouTube, ...</td>\n",
-       "      <td>1528406628420165633</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-05-22T00:00:00Z</td>\n",
-       "      <td>169</td>\n",
-       "      <td>114</td>\n",
-       "      <td>371</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>es</td>\n",
-       "      <td>271102482</td>\n",
-       "      <td>1528402101864435721</td>\n",
-       "      <td>2022-05-22 15:47:12+00:00</td>\n",
-       "      <td>El cielo y la gente que esperan a #PetroEnZipa...</td>\n",
-       "      <td>1528402101864435721</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-05-22T00:00:00Z</td>\n",
-       "      <td>105</td>\n",
-       "      <td>3</td>\n",
-       "      <td>465</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  lang            author_id                   id                created_at  \\\n",
-       "0   es  1367272535071600641  1528166340187627521 2022-05-22 00:10:22+00:00   \n",
-       "1   es            548906668  1528385615506640896 2022-05-22 14:41:41+00:00   \n",
-       "2   es            191283736  1528381170676862976 2022-05-22 14:24:01+00:00   \n",
-       "3   es  1502666231966490627  1528379793712025601 2022-05-22 14:18:33+00:00   \n",
-       "4   es           1869817063  1528166591376117762 2022-05-22 00:11:22+00:00   \n",
-       "5   es             18079284  1528519828549472256 2022-05-22 23:35:00+00:00   \n",
-       "6   es             18079284  1528329833830301698 2022-05-22 11:00:02+00:00   \n",
-       "7   es             18079284  1528345099389878272 2022-05-22 12:00:41+00:00   \n",
-       "8   es            242730842  1528406628420165633 2022-05-22 16:05:11+00:00   \n",
-       "9   es            271102482  1528402101864435721 2022-05-22 15:47:12+00:00   \n",
-       "\n",
-       "                                                text      conversation_id  \\\n",
-       "0  En Cali también decimos Sí a @FicoGutierrez #F...  1528166340187627521   \n",
-       "1  Doña Judith Baca la tiene clara: el pueblo col...  1528385615506640896   \n",
-       "2  Mientras una revista nacional pone en su porta...  1528381170676862976   \n",
-       "3  Sigo al que me siga con Petro a ganar en prime...  1528379793712025601   \n",
-       "4  Hay que leer con muchísima atención esta gran ...  1528166591376117762   \n",
-       "5  \"Estoy absolutamente seguro que sería así y de...  1528519828549472256   \n",
-       "6  Habla Federico Gutiérrez en SEMANA. Dice cómo ...  1528329833830301698   \n",
-       "7  \"Soy una persona tranquila. En la vida nunca i...  1528345099389878272   \n",
-       "8  #NosUnimosONosJodemos “Los niños ven YouTube, ...  1528406628420165633   \n",
-       "9  El cielo y la gente que esperan a #PetroEnZipa...  1528402101864435721   \n",
-       "\n",
-       "                                geo  in_reply_to_user_id referenced_tweets  \\\n",
-       "0  {'place_id': '003f97dd7a518791'}                  NaN      [(type, id)]   \n",
-       "1                               NaN                  NaN               NaN   \n",
-       "2                               NaN                  NaN               NaN   \n",
-       "3                               NaN                  NaN               NaN   \n",
-       "4                               NaN                  NaN               NaN   \n",
-       "5                               NaN                  NaN               NaN   \n",
-       "6                               NaN                  NaN               NaN   \n",
-       "7                               NaN                  NaN               NaN   \n",
-       "8                               NaN                  NaN               NaN   \n",
-       "9                               NaN                  NaN               NaN   \n",
-       "\n",
-       "                   date  retweet_count  reply_count  like_count  quote_count  \n",
-       "0  2022-05-22T00:00:00Z            418           28        1457            5  \n",
-       "1  2022-05-22T00:00:00Z            476           45         799           29  \n",
-       "2  2022-05-22T00:00:00Z            246           24         551            5  \n",
-       "3  2022-05-22T00:00:00Z            329          149        1570           12  \n",
-       "4  2022-05-22T00:00:00Z            252           36         478            5  \n",
-       "5  2022-05-22T00:00:00Z            146           34         351            6  \n",
-       "6  2022-05-22T00:00:00Z            118           27         239            8  \n",
-       "7  2022-05-22T00:00:00Z            156           38         418            7  \n",
-       "8  2022-05-22T00:00:00Z            169          114         371           10  \n",
-       "9  2022-05-22T00:00:00Z            105            3         465            1  "
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "trendings_tweets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "50fecf35-4542-43f2-b905-42d9905afd62",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
